tests/reference/ast-contains1-58ed60a.stderr
syntax error: Internal Compiler Error: syntax is ambiguous in the parser
  --> tests/fixed_form/contains1.f:26:7
   |
26 |       character*(*),intent(out)::b  ! length selector ! assumed length
   |       ^^^^^^^^^^^^^ 
